--- a/views/user/OTP.ejs
+++ b/views/user/OTP.ejs
@@ -114,7 +114,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-3 col-md-4 col-5">
                             <div class="logo-area">
-                                <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                                <a href="index.html"><img src="/public/assets/images/logo/watch_logo.png" alt=""></a>
                             </div>
                         </div>
                         <div class="col-lg-6">
