--- a/views/user/invoice.ejs
+++ b/views/user/invoice.ejs
@@ -163,7 +163,7 @@
                         <% if (findOrder.orderType=="Cash on Delivery") { %>
                             <li><span class="fw-semibold">Method: </span> Cash on Delivery</li>
                         <% }else{ %>
-                            <li><span class="fw-semibold">Method: </span> Razorpay</li>
+                            <li><span class="fw-semibold">Method: </span> Online Payment</li>
                             <% } %>
                     
 
