--- a/views/user/loginPage.ejs
+++ b/views/user/loginPage.ejs
@@ -507,7 +507,7 @@
                                                     <div class="login-toggle-btn">
                                                         <input type="checkbox" id="rememberMe">
                                                         <label for="rememberMe">Remember me</label>
-                                                        <a href="#">Forgot Password?</a>
+                                                        <a href="/forgotpassword">Forgot Password?</a>
                                                     </div>
                                                     <div class="button-box">
                                                         <div class="button-box">
