online payment updated

--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -773,7 +773,7 @@
                                                 <input class="form-check-input" required type="radio" name="payment_option" id="razorpay" value="Razorpay">
                                                 <label class="form-check-label" for="razorpay" data-bs-toggle="collapse" data-target="#bankTranfer" aria-controls="bankTranfer" style="font-size: 15px; font-weight: 500;">
                                                     <span class="me-3"><i class="bi bi-credit-card" style="opacity: 0.5;"></i></span>
-                                                    Razorpay
+                                                    Online payment
                                                 </label>
                                             <% } else { %>
                                                 <p style="margin-left: 40px; font-size: 15px; font-weight: 500;">
